[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ding0"
version = "v0.2.1"
dependencies = [
  "networkx >= 2.5.1",
  "geopy >= 2.1.0",
  "pandas >= 1.2.4",
  "pyproj >= 3.0.1",
  "sqlalchemy >= 1.3.24",
  "geoalchemy2 >= 0.6.3",
  "matplotlib >= 3.4.2",
  "egoio >= 0.4.8",
  "shapely >= 1.8, < 2.0.0",
  "pypsa >= 0.17.1",
  "seaborn >= 0.11.1",
  "oedialect >= 0.0.10",
  "geopandas >= 0.9.0",
  "osmnx>=1.1.1",
  "ding0>=0.2.1",
  "numpy>=1.21.2",
  "pyyaml>=6.0",
  "saio>=0.2.1",
  "scipy>=1.7.1",
  "contextily>=1.2.0",
  "argparse>=1.4.0",
  "scikit-learn>=0.24.2",
  "pymetis",
  "pyshp",
]

requires-python = ">=3.10"
authors = [
  {name = "nesnoj", email = "jonathan.amme@rl-institut.de"},
  {name = "gplssm"},
]
maintainers = [
  {name = "nesnoj", email = "jonathan.amme@rl-institut.de"},
]
description = "DIstribution Network GeneratOr"
readme = "README.md"
license = {text= "AGPL-3.0"}
keywords = ["grid"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Topic :: Scientific/Engineering",
]

[tool.setuptools.package-data]
ding0 = [
  "config/*.cfg", 
  "data/*.csv", 
  "grid/mv_grid/tests/testcases/*.vrp", 
  "grid/mv_grid/tests/testcases/Augerat/*.vrp", 
  "grid/mv_grid/tests/testcases/Augerat-tcc/*.vrp", 
  "grid/mv_grid/tests/testcases/Takes-tcc/*.vrp", 
  "grid/mv_grid/tests/testcases/Vigo/*.vrp",
]

[project.urls]
Homepage = "https://github.com/openego/ding0"
Repository = "https://github.com/openego/ding0.git"
Documentation = "https://dingo.readthedocs.io"
"Bug Tracker" = "https://github.com/openego/ding0/issues"